// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single fields checkbox field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-boolean"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <label
          className="checkbox"
        >
          <input
            autoFocus={false}
            checked={false}
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
        </label>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields checkbox field 2`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-boolean"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <label
          className="checkbox"
        >
          <input
            autoFocus={false}
            checked={false}
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
        </label>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields checkboxes field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-array"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <label
          className="checkbox"
        >
          <input
            autoFocus={false}
            checked={false}
            disabled={false}
            id="root-foo"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="checkbox"
          />
          foo
        </label>
        <label
          className="checkbox"
        >
          <input
            autoFocus={false}
            checked={false}
            disabled={false}
            id="root-bar"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="checkbox"
          />
          bar
        </label>
        <label
          className="checkbox"
        >
          <input
            autoFocus={false}
            checked={false}
            disabled={false}
            id="root-fuzz"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="checkbox"
          />
          fuzz
        </label>
        <label
          className="checkbox"
        >
          <input
            autoFocus={false}
            checked={false}
            disabled={false}
            id="root-qux"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="checkbox"
          />
          qux
        </label>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields field with description 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="field"
    >
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        >
           
          <div
            className="form-group field field-string"
          >
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="root_my-field"
              >
                my-field
              </label>
              <div
                className="control"
              >
                <input
                  autoFocus={false}
                  className="input"
                  disabled={false}
                  id="root_my-field"
                  name="root_my-field"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
              <div
                className="help"
              >
                some description
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields field with description in uiSchema 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="field"
    >
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        >
           
          <div
            className="form-group field field-string"
          >
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="root_my-field"
              >
                my-field
              </label>
              <div
                className="control"
              >
                <input
                  autoFocus={false}
                  className="input"
                  disabled={false}
                  id="root_my-field"
                  name="root_my-field"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
              <div
                className="help"
              >
                some other description
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields format color 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="color"
          value=""
        />
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields format date 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="date"
          value=""
        />
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields format datetime 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="datetime-local"
          value=""
        />
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields help and error display 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <article
    className="message is-danger"
  >
    <div
      className="message-header"
    >
      <p>
        Errors
      </p>
    </div>
    <div
      className="message-body"
    >
      <ul>
        <li>
          . an error
        </li>
      </ul>
    </div>
  </article>
  <div
    className="form-group field field-string field-error has-error has-danger"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <input
          autoFocus={false}
          className="input is-danger"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="text"
          value=""
        />
      </div>
      <div
        className="help is-danger"
      >
        <ul>
          <li>
            an error
          </li>
        </ul>
      </div>
      <p
        className="help is-danger"
        id="root__help"
      >
        help me!
      </p>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields hidden field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="field"
    >
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        >
           
          <div
            className="form-group field field-string"
          >
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="root_my-field"
              >
                my-field
              </label>
              <input
                id="root_my-field"
                name="root_my-field"
                type="hidden"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields hidden label 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields null field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-null"
  >
    <div
      className="field"
    />
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields number field 0 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-number"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          step="any"
          type="number"
          value={0}
        />
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields number field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-number"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          step="any"
          type="number"
          value=""
        />
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields password field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="password"
          value=""
        />
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields radio field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-boolean"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <label
          className="radio"
        >
          <input
            checked={false}
            disabled={false}
            id="root-true"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="radio"
            value={true}
          />
          Yes
        </label>
        <label
          className="radio"
        >
          <input
            checked={false}
            disabled={false}
            id="root-false"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="radio"
            value={false}
          />
          No
        </label>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields schema examples 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          id="root"
          list="examples_root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="text"
          value=""
        />
      </div>
      <datalist
        id="examples_root"
      >
        <option
          value="Firefox"
        />
        <option
          value="Chrome"
        />
        <option
          value="Opera"
        />
        <option
          value="Vivaldi"
        />
        <option
          value="Safari"
        />
      </datalist>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields select field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <div
          className="select is-fullwidth"
        >
          <select
            autoFocus={false}
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            value=""
          >
            <option
              value=""
            />
            <option
              disabled={false}
              id="foo"
              value="foo"
            >
              foo
            </option>
            <option
              disabled={false}
              id="bar"
              value="bar"
            >
              bar
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields slider field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-integer"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <input
          autoFocus={false}
          className="slider is-fullwidth has-output"
          disabled={false}
          id="root"
          max={100}
          min={42}
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="range"
          value={75}
        />
        <output
          className=""
        >
          75
        </output>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields string field format data-url 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="field"
    >
      <div
        className="field has-addons"
      >
        <div
          className="control is-expanded"
        >
          <div
            className="input"
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDrop={[Function]}
          >
            <input
              autoFocus={false}
              disabled={false}
              id="root"
              name="root"
              onChange={[Function]}
              style={
                {
                  "display": "none",
                }
              }
              type="file"
              value=""
            />
            <span
              className="placeholder"
            >
              Choose or drop a file.
            </span>
          </div>
        </div>
        <div
          className="control"
        >
          <button
            className="button is-info"
            disabled={false}
            onClick={[Function]}
            title="Choose"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                {
                  "color": undefined,
                }
              }
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              />
            </svg>
          </button>
        </div>
        <div
          className="control"
        >
          <button
            className="button is-danger"
            disabled={true}
            onClick={[Function]}
            title="Remove"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                {
                  "color": undefined,
                }
              }
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields string field format email 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="email"
          value=""
        />
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields string field format uri 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="url"
          value=""
        />
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields string field regular 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields string field with placeholder 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="placeholder"
          readOnly={false}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields textarea field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <textarea
          autoFocus={false}
          className="input"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          rows={5}
          value=""
        />
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields title field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="field"
    >
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        >
          <div
            className="title-field"
            id="root-title"
          >
            Titre 1
          </div>
        </div>
      </div>
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        >
           
          <div
            className="form-group field field-string"
          >
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="root_title"
              >
                Titre 2
              </label>
              <div
                className="control"
              >
                <input
                  autoFocus={false}
                  className="input"
                  disabled={false}
                  id="root_title"
                  name="root_title"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields unsupported field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-undefined"
  >
    <div
      className="field"
    >
      <div
        className="unsupported-field"
      >
        <p>
          Unsupported field schema
          <span>
             for
             field 
            <code>
              root
            </code>
          </span>
          <em>
            : 
            Unknown field type undefined
          </em>
          .
        </p>
        <pre>
          {}
        </pre>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields up/down field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-number"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="number"
          value=""
        />
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`single fields using custom tagName 1`] = `
<div
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="field"
    >
      <div
        className="control"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</div>
`;
